src/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>competitorName__c</fullName>
        <label>Nombre de la Competencia</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fcv__c</fullName>
        <label>Valor Total del Contrato</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>isCompetitorContract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contrato con la Competencia</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>mrc__c</fullName>
        <label>Cargo Recurrente Mensual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
</CustomObject>